--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,75 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  header
+  h1
+    | ISQA_2 - Metric/Imp Converter
+  #userstories(style='margin-left: 5%; margin-top: 5%')
+  h3 User Stories
+  ol
+    li I will help prevent the client from trying to guess(sniff) the MIME type.
+    li I will prevent cross-site scripting (XSS) attacks.
+    li
+      | I can
+      b GET
+      code /api/convert
+      |  with a single parameter containing an accepted number and unit and have it converted.
+    li Hint: Split the input by looking for the index of the first character.
+    li
+      | I can convert 'gal' to 'L' and vice versa.
+      b (1 gal to 3.78541 L)
+    li
+      | I can convert 'lbs' to 'kg' and vice versa.
+      b (1 lbs to 0.453592 kg)
+    li
+      | I can convert 'mi' to 'km' and vice versa.
+      b (1 mi to 1.60934 km)
+    li If my unit of measurement is invalid, returned will be 'invalid unit'.
+    li If my number is invalid, returned with will 'invalid number'.
+    li If both are invalid, return will be 'invalid number and unit'.
+    li
+      | I can use fractions, decimals or both in my parameter(ie. 5, 1/2, 2.5/6), but if nothing is provided it will default to 1.
+    li
+      | My return will consist of the initNum, initUnit, returnNum, returnUnit, and string spelling out units in format
+      code {initNum} {initial_Units} converts to {returnNum} {return_Units}
+      |  with the result rounded to 5 decimals.
+    li All 16 unit tests are complete and passing.
+    li All 5 functional tests are complete and passing.
+  h3 Example usage:
+  code /api/convert?input=4gal
+  br
+  code /api/convert?input=1/2km
+  br
+  code /api/convert?input=5.4/3lbs
+  br
+  code /api/convert?input=kg
+  br
+  h3 Example return:
+  code
+    | {initNum: 3.1, initUnit: 'mi', returnNum: 5.0000008, returnUnit: 'km', string: '3.1 miles converts to 5.00002 kilometers'}
+  hr(style='margin: 50px')
+  #testui(style='margin-left: 5%')
+  h2(style='text-align: left') Front-End:
+  form#convertForm.border
+    input#convertField(type='text', name='input', placeholder='3.1mi', style='width: 200px')
+    input#convert(type='submit', value='Convert!')
+  p#result
+  code#jsonResult
+  hr(style='margin: 50px; margin-top: 200px')
+  // Your web-app is https, so your scripts need to be too
+  script(src='https://code.jquery.com/jquery-2.2.1.min.js', integrity='sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=', crossorigin='anonymous')
+  script.
+  $(function() {
+  $('#convertForm').submit(function() {
+  event.preventDefault();
+  $.ajax({
+  url: '/api/convert',
+  type: 'get',
+  data: $('#convertForm').serialize(),
+  success: function(data) {
+  $('#result').text(data.string || data);
+  $('#jsonResult').text(JSON.stringify(data));
+  }
+  });
+  });
+  });
