--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,11 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Welcome to Metric-Imperial Converter
+    meta(name='description', content='Metric and Imperial Converter')
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='stylesheet', href='./public/stylesheets/style.css')
   body
     block content
